# acestream-scraper

./: .gitignore  Dockerfile  MANIFEST.in  README.md  check_epg_data.py  docker-compose.yml  entrypoint.sh  force_epg_refresh.py  healthcheck.sh  manage.py  migrations_app.py  pyproject.toml  requirements-dev.txt  requirements-prod.txt  requirements.txt  run_dev.py  test_epg_time.py  test_epg_xml.py  version.txt  warp-setup.sh  wsgi.py
.github/instructions/: chat.instructions.md  frontend.instructions.md  python.instructions.md
.github/workflows/: pull_request.yml  release.yml
app/: __init__.py  __main__.py  acestream_scraper.py  config_loader.py  db_setup.py  extensions.py  routes.py  task_manager.py  tasks.py  zeronet_scraper.py
app/api/: __init__.py  config_routes.py
app/models/: __init__.py  acestream_channel.py  epg_channel.py  epg_program.py  epg_source.py  epg_string_mapping.py  models.py  scraped_url.py  settings.py  tv_channel.py  url_types.py
app/repositories/: __init__.py  base.py  channel_repository.py  epg_channel_repository.py  epg_program_repository.py  epg_source_repository.py  epg_string_mapping_repository.py  settings_repository.py  tv_channel_repository.py  url_repository.py
config/: acestream_channels.db  config.json
docs/: README.md
samples/: epg.xml
tests/: conftest.py  test_acexy_api.py  test_config.py  test_config_migration.py  test_warp_service.py
v2/: README.md  docker-compose.yml
wiki/: Bug-Reporting.md  Configuration.md  Contributing-Scraper-Data.md  Docker.md  FAQ.md  Home.md  Installation.md  Requirements.md  Usage.md
(+156 files in other folders)
